# money-tracker-tauri

./: README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json
src/: MyApp.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/banks/: mod.rs  mufg.rs  rakuten.rs  rakuten_torihiki.rs  smbc.rs
src/components/: BarChart.tsx
src/hooks/: index.ts  useAppState.ts
src/lib/: index.ts
src/models/: index.ts
src/routes/: Categories.tsx  Dashboard.tsx  Root.tsx  Transactions.tsx  index.ts
src/slices/: transactionsSlice.ts
